--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -27,6 +27,33 @@
         "models/style/group1-shard2of3",
         "models/style/group1-shard3of3",
         "models/transformer/model.json",
-        "models/transformer/group1-shard1of1"
+        "models/transformer/group1-shard1of1",
+        "models/yolo/group10-shard1of1",
+        "models/yolo/group11-shard1of1",
+        "models/yolo/group12-shard1of1",
+        "models/yolo/group13-shard1of1",
+        "models/yolo/group14-shard1of2",
+        "models/yolo/group14-shard2of2",
+        "models/yolo/group15-shard1of5",
+        "models/yolo/group15-shard2of5",
+        "models/yolo/group15-shard3of5",
+        "models/yolo/group15-shard4of5",
+        "models/yolo/group15-shard5of5",
+        "models/yolo/group16-shard1of5",
+        "models/yolo/group16-shard2of5",
+        "models/yolo/group16-shard3of5",
+        "models/yolo/group16-shard4of5",
+        "models/yolo/group16-shard5of5",
+        "models/yolo/group17-shard1of1",
+        "models/yolo/group1-shard1of1",
+        "models/yolo/group2-shard1of1",
+        "models/yolo/group3-shard1of1",
+        "models/yolo/group4-shard1of1",
+        "models/yolo/group5-shard1of1",
+        "models/yolo/group6-shard1of1",
+        "models/yolo/group7-shard1of1",
+        "models/yolo/group8-shard1of1",
+        "models/yolo/group9-shard1of1",
+        "models/yolo/model2.json"
     ]
 }
